log-schemas/27.5/opcua_binary_variant_data.rst
``opcua_binary_variant_data`` field reference
---------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``variant_data_link_id`` (string)
     - The variant_data_link_id information.

   * - ``variant_data_value_signed_numeric`` (integer - int)
     - The variant_data_value_signed_numeric information.

   * - ``variant_data_value_unsigned_numeric`` (integer - count)
     - The variant_data_value_unsigned_numeric information.

   * - ``variant_data_value_string`` (string)
     - The variant_data_value_string information.

   * - ``variant_data_node_id_encoding_mask`` (string)
     - The variant_data_node_id_encoding_mask information.

   * - ``variant_data_node_id_namespace_idx`` (integer - count)
     - The variant_data_node_id_namespace_idx information.

   * - ``variant_data_node_id_numeric`` (integer - count)
     - The variant_data_node_id_numeric information.

   * - ``variant_data_node_id_string`` (string)
     - The variant_data_node_id_string information.

   * - ``variant_data_node_id_guid`` (string)
     - The variant_data_node_id_guid information.

   * - ``variant_data_node_id_opaque`` (string)
     - The variant_data_node_id_opaque information.

   * - ``variant_data_node_id_namespace_uri`` (string)
     - The variant_data_node_id_namespace_uri information.

   * - ``variant_data_node_id_server_idx`` (integer - count)
     - The variant_data_node_id_server_idx information.

   * - ``variant_data_value_time`` (time)
     - The variant_data_value_time information.

   * - ``variant_data_encoding_name_idx`` (integer - count)
     - The variant_data_encoding_name_idx information.

   * - ``variant_data_encoding_name`` (string)
     - The variant_data_encoding_name information.

   * - ``variant_data_mask`` (string)
     - The variant_data_mask information.

   * - ``variant_data_locale`` (string)
     - The variant_data_locale information.

   * - ``variant_data_text`` (string)
     - The variant_data_text information.

   * - ``variant_data_value_decimal`` (number - double)
     - The variant_data_value_decimal information.

   * - ``variant_data_status_code_link_id`` (string)
     - The variant_data_status_code_link_id information.

   * - ``variant_data_diag_info_link_id`` (string)
     - The variant_data_diag_info_link_id information.

   * - ``variant_data_ext_obj_link_id`` (string)
     - The variant_data_ext_obj_link_id information.

   * - ``variant_metadata_data_link_id`` (string)
     - The variant_metadata_data_link_id information.

   * - ``variant_data_value_link_id`` (string)
     - The variant_data_value_link_id information.
